<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/value_280dp"
    android:background="@color/white"
    android:orientation="vertical">

    <android.support.v4.view.ViewPager
        android:id="@+id/images_pager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingTop="@dimen/value_24dp"
        android:paddingBottom="@dimen/value_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.gauravsaluja.redmart.customviews.CirclePageIndicator
        android:id="@+id/images_indicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="@dimen/value_8dp"
        android:paddingBottom="@dimen/value_8dp"
        android:clickable="true"
        app:centered="true"
        app:fades="false"
        app:fillColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/images_pager"
        app:pageColor="@color/light_grey"
        app:radius="@dimen/value_3dp"
        app:strokeColor="@color/light_grey"
        app:strokeWidth="@dimen/value_1dp" />

</LinearLayout>